examples/reference/while_unscoped_label_error.err
Assembly failed:
4: ERROR [asm202]
    4 | item .byte 1
^
ERROR: label 'item' not allowed inside .while (use .bwhile for scoped repetition)
